--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -5,6 +5,9 @@
   padding: 10px 20px;
   height: 50px;
   border-bottom: 1px solid lightgrey;
+  position: sticky;
+  top: 0;
+  background-color: white;
 
   .left {
     display: flex;
@@ -44,6 +47,7 @@
       align-items: center;
       gap: 10px;
       font-weight: 500;
+
       img {
         width: 30px;
         height: 30px;
