--- a/src/components/rightBar.scss
+++ b/src/components/rightBar.scss
@@ -1,6 +1,5 @@
 .rightBar {
   flex: 3;
-  border: 1px solid red;
   position: sticky;
   top: 50px;
   height: calc(100vh - 50px);
@@ -8,6 +7,95 @@
 
   &::-webkit-scrollbar {
     display: none;
+  }
+
+  .container {
+    padding: 20px;
+
+    .item {
+      box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.09);
+      padding: 20px;
+
+      span {
+        color: gray;
+      }
+
+      margin-bottom: 20px;
+
+      .user {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 20px;
+        margin: 20px 0;
+
+        .time {
+          white-space: nowrap;
+        }
+
+        .userInfo {
+          position: relative;
+          display: flex;
+          align-items: center;
+          gap: 20px;
+
+          img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+
+          .online {
+            top: 0;
+            left: 30px;
+            position: absolute;
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+            background-color: lightgreen;
+          }
+          .online.offline {
+            background-color: lightgray;
+          }
+
+          span {
+            font-weight: 500;
+            color: black;
+
+          }
+
+          p {
+            color: gray
+          }
+        ;
+        }
+
+        .buttons {
+
+          display: flex;
+          gap: 5px;
+          align-items: center;
+
+          button {
+            border: none;
+            padding: 5px 10px;
+            color: white;
+            border-radius: 10px;
+            cursor: pointer;
+
+            &:first-child {
+              background: #5271ff;
+            }
+
+            &:last-child {
+              background: #f0544f;
+            }
+          }
+
+        }
+      }
+    }
   }
 
 }
