feat: support dark mode

--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -1,61 +1,69 @@
+@import "../style.scss";
+
 .navBar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 20px;
-  height: 50px;
-  border-bottom: 1px solid lightgrey;
-  position: sticky;
-  top: 0;
-  background-color: white;
-
-  .left {
+  @include themify($themes) {
     display: flex;
     align-items: center;
-    gap: 30px;
+    justify-content: space-between;
+    padding: 10px 20px;
+    height: 50px;
+    border-bottom: 1px solid themed('border');
+    position: sticky;
+    top: 0;
+    color: themed('textColor');
+    background-color: themed('bg');
 
-    span {
-      font-weight: 700;
-      font-size: 20px;
-      color: darkblue;
-    }
-
-    .search {
+    .left {
       display: flex;
       align-items: center;
-      //gap: 10px;
-      border: 1px solid lightgray;
-      border-radius: 5px;
-      padding: 5px;
-
-      input {
-        margin-left: 5px;
-        border: none;
-        outline: none;
-        width: 500px;
-      }
-    }
-  }
-
-  .right {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-
-    .user {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-weight: 500;
-
-      img {
-        width: 30px;
-        height: 30px;
-        object-fit: cover;
-        border-radius: 50%;
-      }
+      gap: 30px;
 
       span {
+        font-weight: 700;
+        font-size: 20px;
+        color: themed('logo');
+      }
+
+      .search {
+        display: flex;
+        align-items: center;
+
+        border: 1px solid themed('border');
+        border-radius: 5px;
+        padding: 5px;
+
+        input {
+          margin-left: 5px;
+          border: none;
+          outline: none;
+          width: 500px;
+          background-color: transparent;
+          color: themed('textColor');
+          caret-color: themed('textColor');
+        }
+      }
+    }
+
+    .right {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+
+      .user {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        font-weight: 500;
+
+        img {
+          width: 30px;
+          height: 30px;
+          object-fit: cover;
+          border-radius: 50%;
+        }
+
+        span {
+        }
       }
     }
   }
