feat: add dark/light mode on posts

--- a/src/components/navBar/navbar.scss
+++ b/src/components/navBar/navbar.scss
@@ -12,6 +12,7 @@
     top: 0;
     color: themed('textColor');
     background-color: themed('bg');
+    z-index: 2 ;
 
     .left {
       display: flex;
