--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -1,15 +1,68 @@
+@import "../../style.scss";
+
 .post {
-  .container {
-    padding: 20px;
+  @include themify($themes) {
+    box-shadow: 0 0 25px -10px rgba(0,0,0,0.38);
+    border-radius: 1.25rem;
+    background-color: themed('bg');
+    color: themed('textColor');
+    .container {
+      padding: 20px;
 
-    .user {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      .userInfo{
-        img{}
+      .user {
+        display: flex;
+        align-items: center;
+
+        justify-content: space-between;
+
+        .userInfo {
+          display: flex;
+          gap: 20px;
+
+          img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            object-fit: cover;
+            user-select: none;
+          }
+
+          .details {
+            display: flex;
+            flex-direction: column;
+
+            .name {
+              font-weight: 500;
+            }
+
+            .time {
+              font-size: 0.8rem;
+            }
+          }
+        }
       }
-    }
+      .content {
+        margin: 1.2rem 0;
+        img{
+           margin-top: 1rem;
+          width: 100%;
+          max-height: 500px;
+          object-fit: cover;
+        }
+      }
+      .info{
+        display: flex;
+        gap:1.2rem;
+        align-items: center;
+        .item{
+          display: flex;
+          align-items: center;
+          gap: .5rem;
+          font-size: .8rem;
+          cursor: pointer;
+        }
+      }
 
+    }
   }
 }
