feat: add responsive support for mobile

--- a/src/components/navBar/navbar.scss
+++ b/src/components/navBar/navbar.scss
@@ -41,6 +41,9 @@
           background-color: transparent;
           color: themed('textColor');
           caret-color: themed('textColor');
+          @include mobile{
+            display: none;
+          }
         }
       }
     }
@@ -66,6 +69,9 @@
         span {
         }
       }
+       @include mobile{
+            display: none;
+          }
     }
   }
 }
