--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -6,5 +6,8 @@
     min-height: calc(100vh - 50px);
     background: themed('bgSoft');
     color: themed('textColor');
+    @include mobile{
+      padding: .6rem;
+    }
   }
 }
