--- a/src/pages/profile/Profile.scss
+++ b/src/pages/profile/Profile.scss
@@ -43,7 +43,11 @@
         align-items: center;
         justify-content: space-between;
         margin-bottom: 20px;
-
+        @include mobile{
+          flex-direction: column;
+          height: 28vh;
+          padding: 2rem;
+        }
         .left {
           flex: 1;
           display: flex;
