--- a/src/components/rightBar/rightBar.scss
+++ b/src/components/rightBar/rightBar.scss
@@ -1,4 +1,4 @@
-@import "../style.scss";
+@import "../../style";
 
 .rightBar {
   @include themify($themes) {
@@ -35,9 +35,11 @@
 
           .time {
             white-space: nowrap;
+            font-size: .8rem;
           }
 
           .userInfo {
+            flex-shrink: 0;
             position: relative;
             display: flex;
             align-items: center;
@@ -67,7 +69,6 @@
             span {
               font-weight: 500;
               color: themed("textColor");
-
             }
 
             p {
@@ -102,5 +103,8 @@
         }
       }
     }
+     @include mobile{
+            display: none;
+          }
   }
 }
