--- a/src/components/stories/stories.scss
+++ b/src/components/stories/stories.scss
@@ -1,15 +1,29 @@
+@import "../../style.scss";
+
 .stories {
 
   display: flex;
   height: 250px;
   gap: 10px;
   margin-bottom: 30px;
+  @include mobile {
+    height: 50px;
+    justify-content: space-between;
+  }
 
   .story {
     position: relative;
     flex: 1;
     overflow: hidden;
     border-radius: 10px;
+
+    @include mobile {
+      flex: none;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+
+    }
 
     img {
       width: 100%;
@@ -33,8 +47,10 @@
       cursor: pointer;
       padding: 1px;
       font-size: 1.4rem;
-
-
+      @include mobile {
+        inset: 0;
+        margin: auto;
+      }
 
     }
 
@@ -44,6 +60,9 @@
       left: 1rem;
       font-weight: 500;
       color: #f6f3f3;
+      @include mobile {
+        display: none;
+      }
     }
   }
 }
