feat: add responsive support for tablet

--- a/src/components/rightBar/rightBar.scss
+++ b/src/components/rightBar/rightBar.scss
@@ -106,5 +106,8 @@
      @include mobile{
             display: none;
           }
+     @include tablet{
+            display: none;
+          }
   }
 }
