--- a/src/components/navBar/navbar.scss
+++ b/src/components/navBar/navbar.scss
@@ -44,6 +44,9 @@
           @include mobile{
             display: none;
           }
+          @include tablet{
+            width: 12rem;
+          }
         }
       }
     }
@@ -58,7 +61,9 @@
         align-items: center;
         gap: 10px;
         font-weight: 500;
-
+         @include tablet{
+            display: none;
+          }
         img {
           width: 30px;
           height: 30px;
@@ -72,6 +77,7 @@
        @include mobile{
             display: none;
           }
+
     }
   }
 }
